get midnight working and diplaying list of blog posts

--- a/index.html
+++ b/index.html
@@ -1,24 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Spelunking in Software</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        max-width: 700px;
-        margin: 40px auto;
-        padding: 0 20px;
-        line-height: 1.6;
-      }
-      h1 {
-        color: #336699;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Spelunking in Software</h1>
-    <p>This is my current technical blog <strong>blog.foobarcat.com</strong>.</p>
-    <p>My old technical blog is over <a href="foobarcat.blogspot.com">here</a></p>
-  </body>
-</html>
+---
+layout: index
+title: Home
+---
+
+# Spelunking in Software
+
+This is my current technical blog **blog.foobarcat.com**.
+
+My old technical blog is over [here](http://foobarcat.blogspot.com)
